[package]
name = "dasp"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[dependencies]
dasp_envelope = { path = "../dasp_envelope", default-features = false, optional = true }
dasp_frame = { path = "../dasp_frame", default-features = false }
dasp_interpolate = { path = "../dasp_interpolate", default-features = false, optional = true }
dasp_peak = { path = "../dasp_peak", default-features = false, optional = true }
dasp_ring_buffer = { path = "../dasp_ring_buffer", default-features = false, optional = true }
dasp_rms = { path = "../dasp_rms", default-features = false, optional = true }
dasp_sample = { path = "../dasp_sample", default-features = false }
dasp_signal = { path = "../dasp_signal", default-features = false, optional = true }
dasp_slice = { path = "../dasp_slice", default-features = false, optional = true }
dasp_window = { path = "../dasp_window", default-features = false, optional = true }

[features]
default = ["std"]
all-features-no-std = [
    "envelope",
    "envelope-peak",
    "envelope-rms",
    "interpolate",
    "interpolate-floor",
    "interpolate-linear",
    "interpolate-sinc",
    "peak",
    "ring_buffer",
    "rms",
    "signal",
    "signal-boxed",
    "signal-bus",
    "signal-envelope",
    "signal-rms",
    "signal-window",
    "signal-window-hanning",
    "signal-window-rectangle",
    "slice",
    "slice-boxed",
    "window",
    "window-hanning",
    "window-rectangle",
]
std = [
    "dasp_envelope/std",
    "dasp_frame/std",
    "dasp_interpolate/std",
    "dasp_peak/std",
    "dasp_ring_buffer/std",
    "dasp_rms/std",
    "dasp_sample/std",
    "dasp_signal/std",
    "dasp_slice/std",
    "dasp_window/std",
]
envelope = ["dasp_envelope"]
envelope-peak = ["dasp_envelope/peak"]
envelope-rms = ["dasp_envelope/rms"]
interpolate = ["dasp_interpolate"]
interpolate-floor = ["dasp_interpolate/floor"]
interpolate-linear = ["dasp_interpolate/linear"]
interpolate-sinc = ["dasp_interpolate/sinc"]
peak = ["dasp_peak"]
ring_buffer = ["dasp_ring_buffer"]
rms = ["dasp_rms"]
signal = ["dasp_signal"]
signal-boxed = ["dasp_signal/boxed"]
signal-bus = ["dasp_signal/bus"]
signal-envelope = ["dasp_signal/envelope", "envelope"]
signal-rms = ["dasp_signal/rms", "rms"]
signal-window = ["dasp_signal/window", "window"]
signal-window-hanning = ["dasp_signal/window-hanning", "window-hanning"]
signal-window-rectangle = ["dasp_signal/window-rectangle", "window-rectangle"]
slice = ["dasp_slice"]
slice-boxed = ["dasp_slice/boxed"]
window = ["dasp_window"]
window-hanning = ["dasp_window/hanning"]
window-rectangle = ["dasp_window/rectangle"]

[package.metadata.docs.rs]
all-features = true
