[package]
name = "dasp"
description = "A crate providing the fundamentals for working with audio PCM DSP."
version = "0.11.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "../README.md"
keywords = ["dsp", "bit-depth", "rate", "pcm", "audio"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustaudio/dasp.git"
homepage = "https://github.com/rustaudio/dasp"
edition = "2018"

[dependencies]
dasp_envelope = { version = "0.11", path = "../dasp_envelope", default-features = false, optional = true }
dasp_filter = { version = "0.11", path = "../dasp_filter", default-features = false, optional = true }
dasp_frame = { version = "0.11", path = "../dasp_frame", default-features = false }
dasp_graph = { version = "0.11", path = "../dasp_graph", default-features = false, optional = true }
dasp_interpolate = { version = "0.11", path = "../dasp_interpolate", default-features = false, optional = true }
dasp_peak = { version = "0.11", path = "../dasp_peak", default-features = false, optional = true }
dasp_ring_buffer = { version = "0.11", path = "../dasp_ring_buffer", default-features = false, optional = true }
dasp_rms = { version = "0.11", path = "../dasp_rms", default-features = false, optional = true }
dasp_sample = { version = "0.11", path = "../dasp_sample", default-features = false }
dasp_signal = { version = "0.11", path = "../dasp_signal", default-features = false, optional = true }
dasp_slice = { version = "0.11", path = "../dasp_slice", default-features = false, optional = true }
dasp_window = { version = "0.11", path = "../dasp_window", default-features = false, optional = true }

[features]
default = ["std"]
all = [
    "std",
    "all-no-std",
    # TODO: Move these into `all-no-std` once `dasp_graph` gains `no_std` support.
    "graph",
    "graph-all-nodes",
]
all-no-std = [
    "envelope",
    "envelope-peak",
    "envelope-rms",
    "filter",
    "interpolate",
    "interpolate-floor",
    "interpolate-linear",
    "interpolate-sinc",
    "peak",
    "ring_buffer",
    "rms",
    "signal",
    "signal-boxed",
    "signal-bus",
    "signal-envelope",
    "signal-rms",
    "signal-window",
    "signal-window-hann",
    "signal-window-rectangle",
    "slice",
    "slice-boxed",
    "window",
    "window-hann",
    "window-rectangle",
]
std = [
    "dasp_envelope/std",
    "dasp_filter/std",
    "dasp_frame/std",
    "dasp_interpolate/std",
    "dasp_peak/std",
    "dasp_ring_buffer/std",
    "dasp_rms/std",
    "dasp_sample/std",
    "dasp_signal/std",
    "dasp_slice/std",
    "dasp_window/std",
]
envelope = ["dasp_envelope"]
envelope-peak = ["dasp_envelope/peak"]
envelope-rms = ["dasp_envelope/rms"]
filter = ["dasp_filter"]
graph = ["dasp_graph"]
graph-all-nodes = ["dasp_graph/all-nodes"]
graph-node-boxed = ["dasp_graph/node-boxed"]
graph-node-delay = ["dasp_graph/node-delay"]
graph-node-graph = ["dasp_graph/node-graph"]
graph-node-pass = ["dasp_graph/node-pass"]
graph-node-sum = ["dasp_graph/node-sum"]
interpolate = ["dasp_interpolate"]
interpolate-floor = ["dasp_interpolate/floor"]
interpolate-linear = ["dasp_interpolate/linear"]
interpolate-sinc = ["dasp_interpolate/sinc"]
peak = ["dasp_peak"]
ring_buffer = ["dasp_ring_buffer"]
rms = ["dasp_rms"]
signal = ["dasp_signal"]
signal-boxed = ["dasp_signal/boxed"]
signal-bus = ["dasp_signal/bus"]
signal-envelope = ["dasp_signal/envelope", "envelope"]
signal-rms = ["dasp_signal/rms", "rms"]
signal-window = ["dasp_signal/window", "window"]
signal-window-hann = ["dasp_signal/window-hann", "window-hann"]
signal-window-rectangle = ["dasp_signal/window-rectangle", "window-rectangle"]
slice = ["dasp_slice"]
slice-boxed = ["dasp_slice/boxed"]
window = ["dasp_window"]
window-hann = ["dasp_window/hann"]
window-rectangle = ["dasp_window/rectangle"]

[package.metadata.docs.rs]
all-features = true
