[package]
name = "dasp_envelope"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[dependencies]
dasp_frame = { path = "../dasp_frame", default-features = false }
dasp_peak = { path = "../dasp_peak", default-features = false, optional = true }
dasp_ring_buffer = { path = "../dasp_ring_buffer", default-features = false }
dasp_rms = { path = "../dasp_rms", default-features = false, optional = true }
dasp_sample = { path = "../dasp_sample", default-features = false }

[features]
default = ["std"]
all-features-no-std = [
    "peak",
    "rms",
]
std = [
    "dasp_frame/std",
    "dasp_peak/std",
    "dasp_ring_buffer/std",
    "dasp_rms/std",
    "dasp_sample/std",
]
peak = ["dasp_peak"]
rms = ["dasp_rms"]

[package.metadata.docs.rs]
all-features = true
