[package]
name = "dasp_frame"
description = "An abstraction for audio PCM DSP frames, along with useful conversions and operations."
version = "0.11.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "../README.md"
keywords = ["dsp", "frame", "channel", "pcm", "audio"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustaudio/dasp.git"
homepage = "https://github.com/rustaudio/dasp"
edition = "2018"

[dependencies]
dasp_sample = { version = "0.11", path = "../dasp_sample", default-features = false }

[features]
default = ["std"]
std = ["dasp_sample/std"]

[package.metadata.docs.rs]
all-features = true
