[package]
name = "dasp_interpolate"
description = "An abstraction for audio PCM DSP rate interpolation, including floor, linear and sinc."
version = "0.11.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "../README.md"
keywords = ["dsp", "interpolate", "sample", "rate", "pcm"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustaudio/dasp.git"
homepage = "https://github.com/rustaudio/dasp"
edition = "2018"

[dependencies]
dasp_frame = { version = "0.11", path = "../dasp_frame", default-features = false }
dasp_ring_buffer = { version = "0.11", path = "../dasp_ring_buffer", default-features = false }
dasp_sample = { version = "0.11", path = "../dasp_sample", default-features = false }

[features]
default = ["std"]
all-no-std = [
    "floor",
    "linear",
    "sinc",
]
std = [
    "dasp_frame/std",
    "dasp_ring_buffer/std",
    "dasp_sample/std",
]
floor = []
linear = []
sinc = []

[package.metadata.docs.rs]
all-features = true
