[package]
name = "dasp_peak"
description = "A DSP peak detection library generic over the rectifier."
version = "0.11.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "../README.md"
keywords = ["peak", "rectifier", "full", "half", "wave"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustaudio/dasp.git"
homepage = "https://github.com/rustaudio/dasp"
edition = "2018"

[dependencies]
dasp_frame = { version = "0.11", path = "../dasp_frame", default-features = false }
dasp_sample = { version = "0.11", path = "../dasp_sample", default-features = false }

[features]
default = ["std"]
std = ["dasp_frame/std", "dasp_sample/std"]

[package.metadata.docs.rs]
all-features = true
