[package]
name = "dasp_sample"
description = "A crate providing the fundamentals for working with audio PCM DSP."
version = "0.10.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "README.md"
keywords = ["dsp", "bit-depth", "rate", "pcm", "audio"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustAudio/sample.git"
homepage = "https://github.com/RustAudio/sample"
edition = "2018"

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
