[package]
name = "dasp_slice"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[dependencies]
dasp_sample = { path = "../dasp_sample", default-features = false }
dasp_frame = { path = "../dasp_frame", default-features = false }

[features]
default = ["std"]
boxed = []
std = ["dasp_sample/std", "dasp_frame/std"]

[package.metadata.docs.rs]
all-features = true
