[package]
name = "dasp_slice"
version = "0.11.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[dependencies]
dasp_sample = { version = "0.11", path = "../dasp_sample", default-features = false }
dasp_frame = { version = "0.11", path = "../dasp_frame", default-features = false }

[features]
default = ["std"]
all-features-no-std = [
    "boxed",
]
std = [
    "dasp_sample/std",
    "dasp_frame/std",
]
boxed = []

[package.metadata.docs.rs]
all-features = true
