[package]
name = "dasp_window"
version = "0.11.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[dependencies]
dasp_sample = { version = "0.11", path = "../dasp_sample", default-features = false }

[features]
default = ["std"]
all-features-no-std = [
    "hanning",
    "rectangle",
]
std = [
    "dasp_sample/std",
]
hanning = []
rectangle = []

[package.metadata.docs.rs]
all-features = true
