[package]
name = "dasp_window"
description = "Windowing function abstractions (e.g. hanning, rectangle) for audio PCM DSP."
version = "0.11.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
readme = "../README.md"
keywords = ["dsp", "window", "hanning", "pcm", "audio"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustaudio/dasp.git"
homepage = "https://github.com/rustaudio/dasp"
edition = "2018"

[dependencies]
dasp_sample = { version = "0.11", path = "../dasp_sample", default-features = false }

[features]
default = ["std"]
all-features-no-std = [
    "hanning",
    "rectangle",
]
std = [
    "dasp_sample/std",
]
hanning = []
rectangle = []

[package.metadata.docs.rs]
all-features = true
